finished recruit5.html

--- a/recruit6.html
+++ b/recruit6.html
@@ -19,36 +19,41 @@
 
   <div class="container">
 
-      <form class="well form-horizontal3" action=" " method="post"  id="contact_form">
+      <form class="well form-horizontal2" action=" " method="post"  id="contact_form">
   <fieldset>
 
   <!-- Form Name -->
   <legend><center>校友資訊交流版（Message Board）</center></legend>
-
+  <img src="images/company2.jpg" alt="">
 
 
   <!-- Text input-->
 
   <div class="form-group">
     <label class="col-md-4 control-label" ><i class="glyphicon glyphicon-flag"></i>&nbsp;主題</label>
-    <div class="content">2016暑假作息公告！</div>
+    <div class="content">鑫廷織品開發股份有限公司研發助理</div>
   </div>
   <!-- radio checks -->
  <div class="form-group">
       <label class="col-md-4 control-label"><i class="glyphicon glyphicon-align-center"></i>&nbsp;內容</label>
       <div class="content">
-        敬愛的校友您好<br />
+        ＝＝求才事項＝＝<br />
+        工作內容：夜間部工讀可<br />
+        工作說明：穿紗織造→染布→新樣製作；主管交辦事項<br />
+        工作地點：新北市三重區新北大道二段（進化成路）<br />
+        工作時間：日班9:00-18:00<br />
+        休假制度：週休二日<br />
+        職務類別：技術人員<br / >
+        需有駕照：輕型機車或普通重機車<br />
+        工作待遇：面議<br />
+        附加條件：<br />
+        1. 矯正後視力正常
+        2. 此屬研發是較靜態工作，若無法適應請勿投遞履歷
         <br />
-        本校2016年暑假作習時間如下：自6月27日（星期一）起至9/2日（星期五）止，
-        星期一至星期四上班；上班時間為上午8點至12時，下午1時至4時30分<br />
-        8月22日至8月26日（星期一至星期五）全校共休一週，如需待辦證件服務，請及早申請以免延誤，造成您的不便，敬請見諒！<br />
-        <br />
-        任何疑問歡迎來電洽詢(0229052211)，我們將竭誠為學長姐服務！<br />
-        <br />
-        敬祝：平安喜樂<br />
-        <br />
-        <br />
-        公共事務室敬啟
+        應徵方式<br />
+        聯絡人員：邱小姐13<br />
+        電子郵件（履歷投遞）：empress@newplace.tw<br />
+        電話：0229955188
 
       </div>
   </div>
@@ -56,7 +61,7 @@
 
   <div class="form-group">
     <label class="col-md-4 control-label" ><i class="glyphicon glyphicon-user"></i>&nbsp;提供者</label>
-      <div class="content">吳政航(2016/6/7)</div>
+      <div class="content">張雅棻(2016/11/3)</div>
   </div>
 
 
